# SWE-Project-1

./: .gitignore  CMakeLists.txt  Fridge.h  Ingredient.h  Main  Main.cpp  README.md  Recipe  Recipe.cpp  Recipe.h  html_formatting.md  test  test.cpp
.circleci/: config.yml
Recipes/Breakfast/: -list.txt  Breakfast_Burritos.txt  Egg_Sandwhich.txt
Recipes/Dinner/: Chicken_Mashed_Potatoes_And_Green_Beans.txt  Chicken_Ramen.txt  Pasta_Sausage_And_Peppers.txt
Recipes/Lunch/: Bacon_And_Guacamole_Wrap.txt  Buffalo_Chicken_Sandwhich.txt  Chicken_Apple_Salad.txt  Chicken_Salad_Sandwhich.txt  Egg_Salad_Sandwhich.txt  Greek_Salad .txt  Hummus_And_Veggie_Wrap.txt  Italian_Hoagie.txt  Taco_Wrap.txt  Tuna_Sub.txt
Recipes/Snack/: -list.txt  Chocolate_Chip_Cookie_Bars.txt  Nobake_Mini_Cheesecakes.txt
The-Fridge/: CMakeLists.txt  CMakeLists.txt.user.74366e6  Fridge.h  Ingredient.h  Recipe.h  Recipe.h.autosave  dialog.ui  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  signup.cpp  signup.h  signup.ui  test  test.cpp
The-Fridge/Recipes/Breakfast/: Breakfast_Burritos.txt  Egg_Sandwhich.txt
The-Fridge/Recipes/Dinner/: -List.txt  Chicken_Mashed_Potatoes_And_Green_Beans.txt  Chicken_Ramen.txt  Pasta_Sausage_And_Peppers.txt
The-Fridge/Recipes/Lunch/: -list.txt  Bacon_And_Guacamole_Wrap.txt  Buffalo_Chicken_Sandwhich.txt  Chicken_Apple_Salad.txt  Chicken_Salad_Sandwhich.txt  Greek_Salad.txt  Hummus_And_Veggie_Wrap.txt  Italian_Hoagie.txt
The-Fridge/Recipes/Snack/: Chocolate_Chip_Cookie_Bars.txt  Nobake_Mini_Cheesecakes.txt
The-Fridge/usr/: Test2.txt  Zane.txt  abe.txt  jbn8.txt  working.txt
Webpages/: Webpages.sln
Webpages/Webpages/: Webpages.csproj
build-The-Fridge-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  .ninja_log.recompact  .ninja_log.restat  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-The-Fridge-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-The-Fridge-Desktop_x86_windows_msvc2022_pe_32bit-Debug/: CMakeCache.txt.prev
build-The-Fridge-Qt_6_5_0_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
cppfile/: Fridge.cpp  Ingredient (1).cpp  Ingredient.cpp  Main.cpp  Recipe.cpp
test-build/: CMakeCache.txt
unittest/: CMakeLists.txt  UnitTest.cpp
usr/: abeartus.txt
(+268 files in other folders)
